--- a/mobile/index.html
+++ b/mobile/index.html
@@ -51,6 +51,7 @@
       <img src="../images/nav/navi-vmfx.png" class="naviBanners" style="margin-top:20px;">
         <a href="/video" class="navi"><img src="../images/nav/flow.png">video</a>
         <a href="/art" class="navi"><img src="../images/nav/flow.png">art</a>
+        <a href="/spam" class="navi"><img src="../images/nav/flow.png">spam</a>
         
       <img src="../images/nav/navig-othr.png" class="naviBanners" style="margin-top:20px;">
         <a href="/music" class="navi"><img src="../images/nav/flow.png">music</a>
