--- a/spam/index.html
+++ b/spam/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
     <title>「ｒｅ：Ｌｉｖｅ」</title>
     <link href="core.css" rel="stylesheet" type="text/css" media="all">
-    <link rel="icon" type="image/png" href="../../images/home/pupilpng.png" sizes="1000x1000" />
+    <link rel="icon" type="image/png" href="../images/home/pupilpng.png" sizes="1000x1000" />
 
     <script language="JavaScript" type="text/javascript">
     /*<![CDATA[*/
@@ -41,53 +41,39 @@
     <div id="wrap">
 
         <div id="content_head">
-            <h1>My Digital Draws</h1>
+            <h1>Spam</h1>
         </div>
 
 
         <div id="content">
             <p>
-						here's different digital drawings ive done ~ a mostly complete list
+                this is where i will spam tons of other peoples art, basically just my camera roll but online,
+                but don't mind me
+            </p>
+
+            <p>
+note: sorry i wont include credit, i have hundreds of photos saved already with no sources, also they will be categorized
             </p>
         </div>
 				<div id="content2">
 								<div class="label2">
-										<p><a href="https://relivesight.com/art/">Return Back A Page</a></p>
+										<p><a href="https://relivesight.com/">Return to Home Page</a></p>
 								</div>
 						</div>
 
 
-		<div id="ccontent">
-            <img src="../../images/art/draws/6.0.png"style="width: 664px;"/>
-						<br><br><h3>Newest Attempt</h3>            <ol class="playlist_info">
-							<li>im actually kinda proud of this one, at least when its used as a pfp</li><br>
-                            <br>
-                        </ol>
-                        
-                                </div>
-
-                                
 
 
 
+				<div id="ccontent">
+								<img class="auditorium" src="https://drive.google.com/uc?export=view&id=1-zlHEAOxfU8IKnuxdbyOpwHZS9cgtdwh" style="width: 160px;"/>
+								<br><br><h3>NieR</h3>            <ol class="playlist_info">
+									<li>NieR related art!<</li><br>
+								</ol>
+								<a href="/spam/nier" class="label3">CLICK TO SEE THIS GREATNESS</a>
 
 
-
-
-		<div id="ccontent">
-            <img src="../../images/art/draws/3.0.png"style="width: 664px;"/>
-						<br><br><h3>Some Attempts</h3>            <ol class="playlist_info">
-							<li>im learning to draw ~ ehhhhh <</li><br>
-            <img src="../../images/art/draws/1.0.png"style="width: 204px;"/>
-						<img src="../../images/art/draws/2.png"style="width: 204px;"/>
-						<img src="../../images/art/draws/4.0.png"style="width: 204px;"/>
-						<li>the leftmost attempt is my current profile pic uwu <</li><br>
-</ol>
-
-        </div>
-
-
-
+						</div>
 
 
 
