--- a/videogames/gameslist/index.html
+++ b/videogames/gameslist/index.html
@@ -538,7 +538,9 @@
                <tr><td>Pathologic HD</td><td>Y</td><td>N</td><td>PC</td><td>Plan to</td><td>N</td><td></td></tr>
                <tr><td>Pathologic 2</td><td>Y</td><td>N</td><td>PC</td><td>Plan to</td><td>N</td><td></td></tr>
                <tr><td>Burnout Revenge</td><td>Y</td><td>Y</td><td>PS2</td><td>On going</td><td>N</td><td></td></tr>
-               <tr><td>Deltarune Ch. 1</td><td>Y</td><td>Y</td><td>PS2</td><td>Completed</td><td>N</td><td></td></tr>
+               <tr><td>Deltarune Ch. 1</td><td>Y</td><td>N</td><td>PS2</td><td>Completed</td><td>N</td><td></td></tr>
+               <tr><td>Overwatch</td><td>Y</td><td>N</td><td>PC</td><td>Completed</td><td>N</td><td></td></tr>
+              
               </tbody></table>
 
 
