i spy a type just girls

--- a/spam/index.html
+++ b/spam/index.html
@@ -76,6 +76,26 @@ note: sorry i wont include credit, i have hundreds of photos saved already with 
 						</div>
 
 
+                        <div id="ccontent">
+                            <img class="auditorium" src="https://drive.google.com/uc?export=view&id=1yR4ayFwrVRMhEGiTwbIvS1hcHRUqhKGU" style="width: 160px;"/>
+                            <br><br><h3>Manga</h3>            <ol class="playlist_info">
+                                <li>Just various manga scs i've taken <</li><br>
+                            </ol>
+                            <a href="/spam/manga" class="label3">CLICK TO SEE SPOILERS</a>
+
+
+                    </div>
+
+                    <div id="ccontent">
+                        <img class="auditorium" src="https://drive.google.com/uc?export=view&id=1qX_gbtzT0h4FGnNkDkksKMlsbJDfgxUH" style="width: 160px;"/>
+                        <br><br><h3>Lain</h3>            <ol class="playlist_info">
+                            <li>let's all love lain <</li><br>
+                        </ol>
+                        <a href="/spam/lain" class="label3">CLICK TO SEE BEAUTY</a>
+
+
+                </div>
+
 
 
 
