--- a/spam/index.html
+++ b/spam/index.html
@@ -52,7 +52,7 @@
             </p>
 
             <p>
-note: sorry i wont include credit, i have hundreds of photos saved already with no sources, also they will be categorized
+note: sorry i wont include credit, i have hundreds of photos saved already with no sources, and lots wont be uploaded woops
             </p>
         </div>
 				<div id="content2">
