--- a/videogames/gameslist/index.html
+++ b/videogames/gameslist/index.html
@@ -94,7 +94,7 @@
                <tr><td>Counter-Strike</td><td>Y</td><td>N</td><td>PC</td><td>Online</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Minecraft</td><td>Y</td><td>N</td><td>PC</td><td>Finished (100%)</td><td>Maybe</td><td>Speedrun </td></tr>
                <tr><td>Starbound</td><td>Y</td><td>N</td><td>PC</td><td>Finished </td><td>N</td><td>Glitch hunt</td></tr>
-               <tr><td>Dark Souls III</td><td>Y</td><td>N</td><td>PC</td><td>Ongoing</td><td>Plan to</td><td>Speedrun, Glitch hunt</td></tr>
+               <tr><td>Dark Souls III</td><td>Y</td><td>N</td><td>PC</td><td>Ongoing</td><td>Completed</td><td>Finished all bosses, no ember, no summons, no shield</td></tr>
                <tr><td>Dark Souls II</td><td>N</td><td>N</td><td>PC</td><td>Plan to </td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Dark Souls I</td><td>N</td><td>N</td><td>PC</td><td>Plan to </td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>100% Orange Juice</td><td>Y</td><td>N</td><td>PC</td><td>On Hold</td><td>N</td><td>&nbsp;</td></tr>
