spammy spam spam

--- a/daily/index.html
+++ b/daily/index.html
@@ -55,6 +55,30 @@
 
 
 
+      <br><br>
+      <div id="content">
+        <div class="main">
+                <h2>5.20.20</h2><br><div id="content2">
+                  
+              </div>
+                <h1>Day Thirteen</h1><br>
+                
+                <h3>Personal</h3><p>not a big one today, i did a few different thing but easier to only report on just a couple, so a code focused log today! i did work a little on music and writing but eh that stuff will
+                  stay hidden until it reaches presentable levels. yes code times
+                </p>
+
+<br><h3>Website</h3><p>i wrote some code,,,,,, it was really annoying exploring different ways to do this/get it done, it took way loinger than i planned it would, but i did a quick document about it and it will save me lots of time in the future:
+  <a href="https://relivesight.com/code/ggldcs/" target="_blank">> ggldcs <</a> i had to learn highlight.js for this aaaak
+<br>and using that i was able to create a place to spam images!!!!! introducing <a href="https://relivesight.com/spam/" target="_blank">> !spam! <</a> ive already got like 700 pictures up there over just three pages,
+thats all pretty much!</p>
+
+
+<br><h3>Jams of the day</h3><p>The 1975 - Love It If We Made It : The 1975 - Girls : The 1975 - Love Me</p>
+   
+
+    </div>
+  </div>
+
 
 
 
