--- a/spam/index.html
+++ b/spam/index.html
@@ -62,7 +62,25 @@ note: sorry i wont include credit, i have hundreds of photos saved already with 
 						</div>
 
 
+                        <div id="ccontent">
+                            <img class="auditorium" src="https://drive.google.com/uc?export=view&id=11rq13tsdEQ9M5YZE37r7nuc7ZR61sQiU" style="width: 160px;"/>
+                            <br><br><h3>Tech</h3>            <ol class="playlist_info">
+                                <li>Tech pics~ mostly keebs<</li><br>
+                            </ol>
+                            <a href="/spam/tech" class="label3">CLICK TO SEE THIS GREATNESS</a>
+            
+                            https://drive.google.com/file/d//view?usp=sharing
+                    </div>
 
+                    <div id="ccontent">
+                        <img class="auditorium" src="https://drive.google.com/uc?export=view&id=1mTdqyW4QeplRWg5DZn0B1Vd8atBbdYXx" style="width: 160px;"/>
+                        <br><br><h3>Pretty</h3>            <ol class="playlist_info">
+                            <li>Random pretty and cool art! <</li><br>
+                        </ol>
+                        <a href="/spam/pretty" class="label3">CLICK TO SEE THIS GREATNESS</a>
+
+
+                </div>
 
 
 				<div id="ccontent">
