--- a/daily/index.html
+++ b/daily/index.html
@@ -54,6 +54,33 @@
 
 
 
+      <br><br>
+      <div id="content">
+        <div class="main">
+                <h2>6.04.20</h2><br><div id="content2">
+                  
+              </div>
+                <h1>Day Fourteen</h1><br>
+                
+                <h3>Personal</h3><p>been doing stuff, as will be elaborated below, i reorganized everything i have to do using trello, making completing things significantly more efficient and organized.
+                  i even have a backburner for things im putting off. but mostly i had a bit of a motivational low recently, i am over it now! i am so so so so so excited to be making things again! i gotta be faster!
+                </p>
+
+<br><h3>Website</h3><p>i updated the: <a href="https://relivesight.com/spam/" target="_blank">> spam page <</a>, specifically the tech and pretty pages, which also offloaded my phone's storage quite a bit!
+probably won't upload the spam page until i have 100 or so more photos.<br>
+also i finally did this art page: <a href="https://relivesight.com/art/published" target="_blank">> published era<</a> its the art ive been working on! im pretty proud of it, but some of the textures do not look nice at large sizes so i should redo them rip,
+ill probably just keep note of that for the future</p>
+
+<br><h3>Twitch</h3><p>i started speedrunning cuphead on twitch at: <a href="https://www.twitch.tv/omnisairen" target="_blank">> omnisairen <</a>, im not too good at it, but its going alright so far,
+ill be streaming tomorrow!</p>
+  
+  
+<br><h3>Jams of the day</h3><p>Brian Lowdermilk, Kate Kerrigan - The Mad Ones, Bug Hunter - Making Up Words, Hayley Williams - Simmer</p>
+   
+
+    </div>
+  </div>
+
 
       <br><br>
       <div id="content">
