--- a/art/index.html
+++ b/art/index.html
@@ -60,9 +60,17 @@ note: i cannot draw, so most all i do is digital
 								</div>
 						</div>
 
+                        <div id="ccontent">
+                            <img class="auditorium" src="https://drive.google.com/uc?export=view&id=1oWQqccITk_NanMZh2tlljussXZf_GbVP" style="width: 160px;"/>
+                            <br><br><h3>Published Era</h3>            <ol class="playlist_info">
+                                <li>re:Live Society Phase Two <</li><br>
+                            </ol>
+                            <a href="/art/published" class="label3">CLICK TO SEE PHASE TWO</a>
 
 
+                    </div>
 
+      
 
 				<div id="ccontent">
 								<img class="auditorium" src="../images/art/graphic/1.jpg" style="width: 160px;"/>
