--- a/daily/index.html
+++ b/daily/index.html
@@ -52,6 +52,43 @@
       </div>
 
 
+      <br><br>
+      <div id="content">
+        <div class="main">
+                <h2>6.05.20</h2><br><div id="content2">
+                  
+              </div>
+                <h1>Day Fifteen</h1><br>
+                
+                <h3>Personal</h3><p>gooooood dayyy!! did lots of stuff! also i didn't end up streaming today /shrug</p>
+
+<br><h3>Editing</h3><p>so i spent about 1.5 hrs on an edit today, i mostly learned alot of things dont work haha. my software for encoding clips was broken (which makes editing slower)
+  then i found out my rendering wasn't working, and i had to do all transitions manually, but i still rendered the edit i made in 480p (sad i know ;;) and posted it to: <a href="https://www.youtube.com/watch?v=96Ch4hhuk3Q&feature=youtu.be" target="_blank">> youtube<</a> and
+ <a href="https://www.instagram.com/omnisai.ren/?hl=en" target="_blank">> instagram <</a> either way i should be planning and preparing better methods so i can edit quicker and better, so wish me luck on that tomorrow! (or the next day)</p>
+  
+ <br><h3>Keyboards</h3><p>i lubed a whole bunch of switches while watching avatar! about a third of the way done with doing that,,,, lubing switches is sooo annoying</p>
+ <br><img src="https://drive.google.com/uc?export=view&id=1OhvWhjV43yJFjzusWVAA9HbsbbClsvMV" width="604px"><br>
+
+ <br><h3>Manga</h3><p>i am wayyyy behind on komi cant communicate, so i read like 40 chapters, here are some parts i thought were cute/funny/etc</p>
+ <br><img src="https://drive.google.com/uc?export=view&id=1i0zRSSkApTLgxG2hY0pxhhDWZN2Xp8u6" width="302px">
+ <img src="https://drive.google.com/uc?export=view&id=1VWiio7u__8zEN6bNjso4_qtD6fvyX_yD" width="302px">
+ <img src="https://drive.google.com/uc?export=view&id=1Ic7wAiO9jU_yyPtmihf1UjlrGMgA4YNo" width="604px">
+ <img src="https://drive.google.com/uc?export=view&id=1whmE3iO0zzgWK9ztou5lD9tg7F0VuOZM" width="604px">
+ <img src="https://drive.google.com/uc?export=view&id=1vnXB1_J9vE_wrC7nKlTg1-7Ozw4rgblO" width="604px">
+
+ <img src="https://drive.google.com/uc?export=view&id=15EyHUtjyl1HZA95nMPsoRXC0r9_jO3XX" width="604px">
+ <br>
+
+ <br><h3>3d Printing</h3><p>im still printing pieces for my upcoming video! so yeah more of that was done today!</p>
+ 
+
+
+<br><h3>Jams of the day</h3><p>Co Shu Nie - Asphyxia, Cavetown - Deviltown</p>
+   
+
+    </div>
+  </div>
+
 
 
       <br><br>
@@ -73,14 +110,15 @@ ill probably just keep note of that for the future</p>
 
 <br><h3>Twitch</h3><p>i started speedrunning cuphead on twitch at: <a href="https://www.twitch.tv/omnisairen" target="_blank">> omnisairen <</a>, im not too good at it, but its going alright so far,
 ill be streaming tomorrow!</p>
-  
+
   
 <br><h3>Jams of the day</h3><p>Brian Lowdermilk, Kate Kerrigan - The Mad Ones, Bug Hunter - Making Up Words, Hayley Williams - Simmer</p>
    
+</div>
+</div>
 
-    </div>
-  </div>
 
+ 
 
       <br><br>
       <div id="content">
