--- a/daily/index.html
+++ b/daily/index.html
@@ -60,7 +60,7 @@
               </div>
                 <h1>Day Fifteen</h1><br>
                 
-                <h3>Personal</h3><p>gooooood dayyy!! did lots of stuff! also i didn't end up streaming today /shrug</p>
+                <h3>Personal</h3><p>gooooood dayyy!! did lots of stuff! also i didn't end up streaming today /shrug, also also i found out i need to bleach my hair for a week or two before i die it pink, so ill be bright blonde as of this sunday and forward until i can do it pink~</p>
 
 <br><h3>Editing</h3><p>so i spent about 1.5 hrs on an edit today, i mostly learned alot of things dont work haha. my software for encoding clips was broken (which makes editing slower)
   then i found out my rendering wasn't working, and i had to do all transitions manually, but i still rendered the edit i made in 480p (sad i know ;;) and posted it to: <a href="https://www.youtube.com/watch?v=96Ch4hhuk3Q&feature=youtu.be" target="_blank">> youtube<</a> and
