fix no more lewd and cuphead review

--- a/randomlove/characters/index.html
+++ b/randomlove/characters/index.html
@@ -184,7 +184,7 @@
 									<li>Origin: Dark Souls</li>
 									<li>Gender: Female</li>
 									<li>Rating: B</li>
-									<li>Notes: Amazing chest ahead</li><br>
+									<li>Notes: No mimic ahead</li><br>
 								</ol>
 			</div>
 
