--- a/videogames/index.html
+++ b/videogames/index.html
@@ -69,6 +69,17 @@
 
         </div>
 
+
+
+        <div id="ccontent">
+          <img class="auditorium" src="https://drive.google.com/uc?export=view&id=1RaefrMHb8wDYdGZEUYF0NGQSIik1n9tY" style="width: 160px;"/>
+          <br><br><h3>Cuphead</h3>            <ol class="playlist_info">
+            <li>my experience with cuphead <</li><br>
+          </ol>
+          <a href="/videogames/hollowknight" class="label3">CLICK TO SEE MORE CUPHEAD</a>
+      </div>
+
+
         <div id="ccontent">
             <img class="auditorium" src="../images/videogames/hk/1.jpg" style="width: 160px;"/>
 						<br><br><h3>Hollow Knight</h3>            <ol class="playlist_info">
