--- a/daily/index.html
+++ b/daily/index.html
@@ -52,6 +52,53 @@
       </div>
 
 
+
+
+
+
+
+
+
+
+      <br><br>
+      <div id="content">
+        <div class="main">
+                <h2>6.06.20</h2><br><div id="content2">
+                  
+              </div>
+                <h1>Day Sixteen</h1><br>
+                
+                <h3>Personal</h3><p>oh, we're moving on! cuz nothing else is standing in our way! stay focused on the present! we're moving fast! and anything that's lame we are blowing right past!</p>
+
+<br><h3>Keyboards</h3><p>i finished lubing switches ;; its such a pain, and it takes so longgggggg, glad to be done so i can start handwiring</p>
+<br>
+<img src="https://drive.google.com/uc?export=view&id=1OvEdeVW2h-EDNszYDAGN2m0cOYPGaG8h" width="604px">
+<br>
+<p>also i got a new deskmat and took a picture of it with my fav trackball</p><br>
+<img src="https://drive.google.com/uc?export=view&id=1P43fJiODpa899fKIWKxCEosi6UQjdZUI" width="604px" >
+<br>
+
+ <br><h3>Website</h3><p>i wrote a brief little thing about cuphead for the website, see it:
+  <a href="https://relivesight.com/videogames/cuphead/" target="_blank">> here <</a>
+ </p>
+
+
+ <br><h3>Manga/Shows</h3><p>read more komi cant communicate, watched more avatar, and ep 1 of my next life as villainess: all routes lead to doom!
+   it looks pretty good so far, i like this isekai alot more than i should eheh, maybe im just anime deprived but im enjoying it, for some reason the last anime i picked didn't sit well, but i'm glad to be enjoying it again,
+   thanks alex for the recommendation~ this is the carefree anime feeling i missed.. also the meeting in catarina's head was adorable~
+ </p>
+ 
+
+ <br><h3>3d Printing</h3><p>prints really do take a long time dont theyyy ;;</p>
+ 
+
+
+<br><h3>Jams of the day</h3><p>New Politics - A Bad Girl In Harlem, Pale Waves - My Mind Makes Noises</p>
+    </div>
+  </div> 
+
+
+
       <br><br>
       <div id="content">
         <div class="main">
