--- a/videogames/gameslist/index.html
+++ b/videogames/gameslist/index.html
@@ -242,8 +242,8 @@
                <tr><td>FEMINAZI: The Triggering</td><td>Y</td><td>N</td><td>PC</td><td>Quick look</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Break The Game</td><td>Y</td><td>N</td><td>PC</td><td>Quick look</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Papers Please</td><td>Y</td><td>N</td><td>PC</td><td>Plan to </td><td>N</td><td>&nbsp;</td></tr>
-               <tr><td>Hotline Miami</td><td>Y</td><td>N</td><td>PC</td><td>Plan to </td><td>N</td><td>&nbsp;</td></tr>
-               <tr><td>Hotline Miami 2</td><td>Y</td><td>N</td><td>PC</td><td>Plan to </td><td>N</td><td>&nbsp;</td></tr>
+               <tr><td>Hotline Miami</td><td>Y</td><td>N</td><td>PC</td><td>Ongoing </td><td>N</td><td>&nbsp;</td></tr>
+               <tr><td>Hotline Miami 2</td><td>N</td><td>N</td><td>PC</td><td>Plan to </td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>KARAKARA</td><td>Y</td><td>N</td><td>PC</td><td>On Hold</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>IMMURE</td><td>Y</td><td>N</td><td>PC</td><td>Plan to </td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Depression Quest</td><td>Y</td><td>N</td><td>PC</td><td>Not started</td><td>N</td><td>&nbsp;</td></tr>
