--- a/videogames/index.html
+++ b/videogames/index.html
@@ -76,7 +76,7 @@
           <br><br><h3>Cuphead</h3>            <ol class="playlist_info">
             <li>my experience with cuphead <</li><br>
           </ol>
-          <a href="/videogames/hollowknight" class="label3">CLICK TO SEE MORE CUPHEAD</a>
+          <a href="/videogames/cuphead" class="label3">CLICK TO SEE MORE CUPHEAD</a>
       </div>
 
 
