--- a/anime/list/index.html
+++ b/anime/list/index.html
@@ -265,8 +265,9 @@
          <tr><td>Koukaku Kidoutai: Stand Alone Complex </td><td>Watching</td><td>1</td><td>Tv</td><td>~</td></tr>
          <tr><td>Seishun Buta Yarou wa Bunny Girl Senpai no Yume wo Minai </td><td>Completed</td><td>12</td><td>Tv</td><td>7.4</td></tr>
          <tr><td>Rascal Does Not Dream of Dreaming Girl</td><td>Completed</td><td>1</td><td>Movie</td><td>7.4</td></tr>
-         <tr><td>91 Days</td><td>Watching</td><td>10</td><td>Tv</td><td>~</td></tr>
-         <tr><td>Avatar: The Last Airbender </td><td>Watching</td><td>4</td><td>(Not anime)</td><td>~</td></tr>
+         <tr><td>91 Days</td><td>Dropped</td><td>10</td><td>Tv</td><td>~</td></tr>
+         <tr><td>Avatar: The Last Airbender </td><td>Watching</td><td>35</td><td>(Not anime)</td><td>~</td></tr>
+         <tr><td>My Next Life as a Villainess</td><td>Watching</td><td>1</td><td>Tv</td><td>~</td></tr>
         </tbody></table>
 
 
