--- a/daily/index.html
+++ b/daily/index.html
@@ -83,7 +83,7 @@
  </p>
 
 
- <br><h3>Manga/Shows</h3><p>read more komi cant communicate, watched more avatar, and ep 1 of my next life as villainess: all routes lead to doom!
+ <br><h3>Manga/Shows</h3><p>read more komi cant communicate, watched more avatar, and ep 1 of my next life as a villainess: all routes lead to doom!
    it looks pretty good so far, i like this isekai alot more than i should eheh, maybe im just anime deprived but im enjoying it, for some reason the last anime i picked didn't sit well, but i'm glad to be enjoying it again,
    thanks alex for the recommendation~ this is the carefree anime feeling i missed.. also the meeting in catarina's head was adorable~
  </p>
