--- a/art/index.html
+++ b/art/index.html
@@ -96,6 +96,17 @@ note: i cannot draw, so most all i do is digital
 
 
                 <div id="ccontent">
+                    <img class="auditorium" src="https://drive.google.com/uc?export=view&id=14an-v4lQrszD6cEG6qshbdh1c47HZdCC" style="width: 160px;"/>
+                    <br><br><h3>Friend Draws</h3>            <ol class="playlist_info">
+                        <li>things friends have drawn for me! thanks~<</li><br>
+                    </ol>
+                    <a href="/art/frens" class="label3">CLICK TO SEE THEIR WORK</a>
+
+
+                </div>
+
+
+                <div id="ccontent">
                     <img class="auditorium" src="../images/art/wallpaper/1.png" style="width: 160px;"/>
                     <br><br><h3>Wallpapers</h3>            <ol class="playlist_info">
                         <li>I made these in PS but i mostly use very talented artists' works and just fit them together for my res~<</li><br>
