--- a/daily/index.html
+++ b/daily/index.html
@@ -532,7 +532,7 @@ wont use it, also it wasnt fun at all i lied sorry, for some reason i have fond 
               
                 <h3>Music</h3><p>i listened to so much hamilton and razia's shadow today, repeat, repeat, repeat. </p>
                 <br>
-                <h3>Fact of the day</h3><p><a href="http://en.wikipedia.org/wiki/Special:Randompage" target="_blank">A suprise! Click me :></a>
+                <h3>Fact of the day</h3><p><a href="http://en.wikipedia.org/wiki/Special:Randompage" target="_blank">A suprise! Click me, then do it again :></a>
                 </p>
        
               </div>
