--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
 <p>feel free to leave a note in the guest-book while you're here!</p>
 
 
+<div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
+        <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">6/25/20 </h3>
+          <p style="margin-bottom:30px;">*＊✿❀pink hair black nails❀✿＊*</p>
+        </div>
+
 
 
 <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif" class="img-center"></div>
