--- a/mobile/index.html
+++ b/mobile/index.html
@@ -77,7 +77,15 @@
       <img class="logo" style="width:300px;" src="../images/home/tumble.png" />
 			<img class="logo" style="width:300px;" src="../images/home/ddd.gif" />-->
       <div class="row imgPixel">
-       
+ 
+        
+
+<div class="col-sm-9 col-md-offset-1">
+  <h3 style="margin-bottom:10px;">6/25/20 </h3>
+  <p style="margin-bottom:30px;">*＊✿❀pink hair black nails❀✿＊*</p>
+</div>
+
+
 
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">4/28/20 </h3>
