the entire manga and etc

--- a/randomlove/characters/index.html
+++ b/randomlove/characters/index.html
@@ -163,7 +163,7 @@
 														<li>Origin: Bayonetta</li>
 														<li>Gender: Female</li>
 														<li>Rating: S</li>
-														<li>Notes: hhhhhhhot... and uh fun game yes</li><br>
+														<li>Notes: fun game yes!</li><br>
 													</ol>
 									</div>
 
@@ -178,15 +178,7 @@
 					</div>
 
 
-				<div id="ccontent">
-								<img class="auditorium" src="../../images/randomlove/characters/gy.jpg" style="width: 160px;"/>
-								<br><br><h3>Gwynevere </h3>            <ol class="playlist_info">
-									<li>Origin: Dark Souls</li>
-									<li>Gender: Female</li>
-									<li>Rating: B</li>
-									<li>Notes: No mimic ahead</li><br>
-								</ol>
-			</div>
+				
 
 
 
