--- a/videogames/gameslist/index.html
+++ b/videogames/gameslist/index.html
@@ -95,7 +95,7 @@
                <tr><td>Minecraft</td><td>Y</td><td>N</td><td>PC</td><td>Finished (100%)</td><td>Maybe</td><td>Speedrun </td></tr>
                <tr><td>Starbound</td><td>Y</td><td>N</td><td>PC</td><td>Finished </td><td>N</td><td>Glitch hunt</td></tr>
                <tr><td>Dark Souls III</td><td>Y</td><td>N</td><td>PC</td><td>Finished</td><td>N</td><td>Finished all bosses, no ember, no summons, no shield</td></tr>
-               <tr><td>Dark Souls II</td><td>N</td><td>N</td><td>PC</td><td>Plan to </td><td>N</td><td>&nbsp;</td></tr>
+               <tr><td>Dark Souls II</td><td>Y</td><td>N</td><td>PC</td><td>Plan to </td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Dark Souls I</td><td>N</td><td>N</td><td>PC</td><td>Plan to </td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>100% Orange Juice</td><td>Y</td><td>N</td><td>PC</td><td>On Hold</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Stellaris</td><td>Y</td><td>N</td><td>PC</td><td>Finished</td><td>N</td><td>&nbsp;</td></tr>
@@ -134,7 +134,7 @@
                <tr><td>Black The Fall</td><td>Y</td><td>N</td><td>PC</td><td>Finished</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Dead Cells</td><td>Y</td><td>N</td><td>PC</td><td>On Hold</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>TrackMania Nations Forever</td><td>Y</td><td>N</td><td>PC</td><td>Open ended</td><td>N</td><td>&nbsp;</td></tr>
-               <tr><td>Stardew Valley</td><td>Y</td><td>N</td><td>PC</td><td>On Hold</td><td>N</td><td>&nbsp;</td></tr>
+               <tr><td>Stardew Valley</td><td>Y</td><td>N</td><td>PC</td><td>Ongoing</td><td>N</td><td>Quite enjoyable!</td></tr>
                <tr><td>Left 4 Dead 2 </td><td>Y</td><td>N</td><td>PC</td><td>Online</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Fran Bow</td><td>Y</td><td>N</td><td>PC</td><td>On Hold</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Emily Is Away Too</td><td>Y</td><td>N</td><td>PC</td><td>On Hold</td><td>N</td><td>&nbsp;</td></tr>
@@ -539,9 +539,21 @@
                <tr><td>Pathologic 2</td><td>Y</td><td>N</td><td>PC</td><td>Plan to</td><td>N</td><td></td></tr>
                <tr><td>Burnout Revenge</td><td>Y</td><td>Y</td><td>PS2</td><td>Finished</td><td>N</td><td></td></tr>
                <tr><td>Deltarune Ch. 1</td><td>Y</td><td>N</td><td>PS2</td><td>Finished</td><td>N</td><td></td></tr>
-               <tr><td>Overwatch</td><td>Y</td><td>N</td><td>PC</td><td>Finished</td><td>N</td><td></td></tr>
-               <tr><td>Total War Shogun 2</td><td>Y</td><td>N</td><td>PC</td><td>Ongoing</td><td>N</td><td></td></tr>
-               <tr><td>Valorant</td><td>Y</td><td>N</td><td>PC</td><td>Ongoing</td><td>N</td><td></td></tr>
+               <tr><td>Overwatch</td><td>Y</td><td>N</td><td>PC</td><td>Online</td><td>N</td><td>probably never again</td></tr>
+               <tr><td>Total War Shogun 2</td><td>Y</td><td>N</td><td>PC</td><td>Ongoing</td><td>N</td><td>smart game ;; scary</td></tr>
+               <tr><td>Valorant</td><td>Y</td><td>N</td><td>PC</td><td>Online</td><td>N</td><td>I enjoy</td></tr>
+               <tr><td>Punch Out Wii</td><td>N</td><td>Y</td><td>WII</td><td>Completed</td><td>Maybe</td><td>Beat Title Bout</td></tr>
+               <tr><td>Tiny & Big in Grandpa's Leftovers</td><td>Y</td><td>N</td><td>PC</td><td>Ongoing</td><td>N</td><td></td></tr>
+               <tr><td>About Love, Hate and the other ones </td><td>Y</td><td>N</td><td>PC</td><td>Not Started</td><td>N</td><td></td></tr>
+               <tr><td>On Rusty Trails</td><td>Y</td><td>N</td><td>PC</td><td>Not Started</td><td>N</td><td></td></tr>
+               <tr><td>Gato Roboto</td><td>Y</td><td>N</td><td>PC</td><td>Plan to</td><td>N</td><td></td></tr>
+               <tr><td>Dead by Daylight</td><td>Y</td><td>N</td><td>PC</td><td>Plan to</td><td>N</td><td></td></tr>
+               <tr><td>Papers, Please</td><td>Y</td><td>N</td><td>PC</td><td>Plan to</td><td>N</td><td></td></tr>
+               <tr><td>GORN</td><td>Y</td><td>N</td><td>PC</td><td>Plan to</td><td>N</td><td></td></tr>
+               <tr><td>SuperHot VR</td><td>Y</td><td>N</td><td>PC</td><td>Plan to</td><td>N</td><td></td></tr>
+               <tr><td>Muse Dash</td><td>Y</td><td>N</td><td>PC</td><td>Plan to</td><td>N</td><td></td></tr>
+
+
               </tbody></table>
 
 
