--- a/manga/index.html
+++ b/manga/index.html
@@ -68,7 +68,7 @@
 						<br><br><h3>My Husband is a housewife</h3>            <ol class="playlist_info">
 							<li>✿ I LOVE THIS MANGA SO MUCH​ ✿ <</li><br>
             </ol>
-						<a href="/randomlove/characters" class="label3">CLICK TO READ</a>
+						<a href="/manga/my-husband-is-a-housewife/" class="label3">CLICK TO READ</a>
 
 
         </div>
