sum bisual chages ​┈

--- a/code/index.html
+++ b/code/index.html
@@ -75,7 +75,7 @@
 						<br><br><h3>ggldcs</h3>            <ol class="playlist_info">
 							<li>not impressive, just automated <</li><br>
             </ol>
-						<a href="/code/ggldcs"  target="_blank" class="label3">CLICK TO SEE MY CODE</a>
+						<a href="/code/ggldcs" class="label3">CLICK TO SEE MY CODE</a>
 
 
         </div>
