--- a/spam/index.html
+++ b/spam/index.html
@@ -71,7 +71,7 @@ note: sorry i wont include credit, i have hundreds of photos saved already with 
             
 
                     </div>
-
+                   <!--
                     <div id="ccontent">
                         <img class="auditorium" src="https://drive.google.com/uc?export=view&id=1mTdqyW4QeplRWg5DZn0B1Vd8atBbdYXx" style="width: 160px;"/>
                         <br><br><h3>Pretty</h3>            <ol class="playlist_info">
@@ -80,7 +80,7 @@ note: sorry i wont include credit, i have hundreds of photos saved already with 
                         <a href="/spam/pretty" class="label3">CLICK TO SEE THIS GREATNESS</a>
 
 
-                </div>
+                </div>-->
 
 
 				<div id="ccontent">
