--- a/randomlove/musicals/index.html
+++ b/randomlove/musicals/index.html
@@ -149,100 +149,138 @@
 												
 
 
-														<div id="ccontent">
-																		<img class="auditorium" src="../../images/randomlove/musicals/rc.jpg" style="width: 160px;"/>
-																		<br><br><h3>Carrie</h3>            <ol class="playlist_info">
-																			<li>Producer: Lawrence D. Cohen</li>
-																			<li>Release: 1988</li>
-																			<li>Rating: Spicy</li><br>
-																		</ol>
-																	</div>
-
-																	<div id="ccontent">
-																					<img class="auditorium" src="../../images/randomlove/musicals/g.jpg" style="width: 160px;"/>
-																					<br><br><h3>Mean Girls</h3>            <ol class="playlist_info">
-																						<li>Producer: Tina Fey</li>
-																						<li>Release: 2017</li>
-																						<li>Rating: Sweet</li><br>
-																					</ol>
-																				</div>
+										<div id="ccontent">
+														<img class="auditorium" src="../../images/randomlove/musicals/rc.jpg" style="width: 160px;"/>
+														<br><br><h3>Carrie</h3>            <ol class="playlist_info">
+															<li>Producer: Lawrence D. Cohen</li>
+															<li>Release: 1988</li>
+															<li>Rating: Spicy</li><br>
+														</ol>
+													</div>
 
 													<div id="ccontent">
-																	<img class="auditorium" src="../../images/randomlove/musicals/bb.jpg" style="width: 160px;"/>
-																	<br><br><h3>Bat Boy</h3>            <ol class="playlist_info">
-																		<li>Producer: Joe Iconis</li>
-																		<li>Release: 1997</li>
-																		<li>Rating: Tart</li><br>
+																	<img class="auditorium" src="../../images/randomlove/musicals/g.jpg" style="width: 160px;"/>
+																	<br><br><h3>Mean Girls</h3>            <ol class="playlist_info">
+																		<li>Producer: Tina Fey</li>
+																		<li>Release: 2017</li>
+																		<li>Rating: Sweet</li><br>
 																	</ol>
 																</div>
-																<div id="ccontent">
-																				<img class="auditorium" src="../../images/randomlove/musicals/sr.jpg" style="width: 160px;"/>
-																				<br><br><h3>Something Rotten!</h3>            <ol class="playlist_info">
-																					<li>Producer: John O'Farrell and Karey Kirkpatrick</li>
-																					<li>Release: 2015</li>
-																					<li>Rating: Ultra Flavorful</li><br>
-																				</ol>
-																			</div>
 
-														<div id="ccontent">
-																<img class="auditorium" src="../../images/randomlove/musicals/21.jpg" style="width: 160px;"/>
-																<br><br><h3>21 Chump Street</h3>            <ol class="playlist_info">
-																	<li>Producer: Lin-Manuel Miranda</li>
-																	<li>Release: 2014</li>
-																	<li>Rating: It Tastes</li><br>
+									<div id="ccontent">
+													<img class="auditorium" src="../../images/randomlove/musicals/bb.jpg" style="width: 160px;"/>
+													<br><br><h3>Bat Boy</h3>            <ol class="playlist_info">
+														<li>Producer: Joe Iconis</li>
+														<li>Release: 1997</li>
+														<li>Rating: Tart</li><br>
+													</ol>
+												</div>
+												<div id="ccontent">
+																<img class="auditorium" src="../../images/randomlove/musicals/sr.jpg" style="width: 160px;"/>
+																<br><br><h3>Something Rotten!</h3>            <ol class="playlist_info">
+																	<li>Producer: John O'Farrell and Karey Kirkpatrick</li>
+																	<li>Release: 2015</li>
+																	<li>Rating: Ultra Flavorful</li><br>
 																</ol>
 															</div>
-															<div id="ccontent">
-																			<img class="auditorium" src="../../images/randomlove/musicals/ntn.jpg" style="width: 160px;"/>
-																			<br><br><h3>Next To Normal</h3>            <ol class="playlist_info">
-																				<li>Producer: Brian Yorkey</li>
-																				<li>Release: 2008</li>
-																				<li>Rating: Good Amount of Yum</li><br>
-																			</ol>
-																		</div>
 
-															<div id="ccontent">
-															<img class="auditorium" src="../../images/randomlove/musicals/lso.jpg" style="width: 160px;"/>
-															<br><br><h3>Little Shop of Horrors</h3>            <ol class="playlist_info">
-																<li>Producer: Howard Ashman</li>
-																<li>Release: 1982</li>
-																<li>Rating: Has Taste</li><br>
+										<div id="ccontent">
+												<img class="auditorium" src="../../images/randomlove/musicals/21.jpg" style="width: 160px;"/>
+												<br><br><h3>21 Chump Street</h3>            <ol class="playlist_info">
+													<li>Producer: Lin-Manuel Miranda</li>
+													<li>Release: 2014</li>
+													<li>Rating: It Tastes</li><br>
+												</ol>
+											</div>
+											<div id="ccontent">
+															<img class="auditorium" src="../../images/randomlove/musicals/ntn.jpg" style="width: 160px;"/>
+															<br><br><h3>Next To Normal</h3>            <ol class="playlist_info">
+																<li>Producer: Brian Yorkey</li>
+																<li>Release: 2008</li>
+																<li>Rating: Good Amount of Yum</li><br>
 															</ol>
-															</div>
-															<div id="ccontent">
-															<img class="auditorium" src="../../images/randomlove/musicals/ff.jpg" style="width: 160px;"/>
-															<br><br><h3>Falsettos</h3>            <ol class="playlist_info">
-																<li>Producer: James Lapine and William Finn</li>
-																<li>Release: 2016</li>
-																<li>Rating: Eh</li><br>
-															</ol>
-															</div>
-															<div id="ccontent">
-															<img class="auditorium" src="../../images/randomlove/musicals/fl.jpg" style="width: 160px;"/>
-															<br><br><h3>Footloose</h3>            <ol class="playlist_info">
-																<li>Producer: Dean Pitchford and Walter Bobbie</li>
-																<li>Release: 1998</li>
-																<li>Rating: Eh</li><br>
-															</ol>
-															</div>
-															<div id="ccontent">
-															<img class="auditorium" src="../../images/randomlove/musicals/ma.jpg" style="width: 160px;"/>
-															<br><br><h3>Matilda</h3>            <ol class="playlist_info">
-																<li>Producer: Dennis Kelly</li>
-																<li>Release: 2010</li>
-																<li>Rating: Eh</li><br>
-															</ol>
-															</div>
+														</div>
 
-															<div id="ccontent">
-															<img class="auditorium" src="../../images/randomlove/musicals/tt.jpg" style="width: 160px;"/>
-															<br><br><h3>The Book of Mormon</h3>            <ol class="playlist_info">
-																<li>Producer: Matt Stone, Robert Lopez, Trey Parker</li>
-																<li>Release: 2011</li>
-																<li>Rating: Taste</li><br>
-															</ol>
-															</div>
+											<div id="ccontent">
+											<img class="auditorium" src="../../images/randomlove/musicals/lso.jpg" style="width: 160px;"/>
+											<br><br><h3>Little Shop of Horrors</h3>            <ol class="playlist_info">
+												<li>Producer: Howard Ashman</li>
+												<li>Release: 1982</li>
+												<li>Rating: Has Taste</li><br>
+											</ol>
+											</div>
+											<div id="ccontent">
+											<img class="auditorium" src="../../images/randomlove/musicals/ff.jpg" style="width: 160px;"/>
+											<br><br><h3>Falsettos</h3>            <ol class="playlist_info">
+												<li>Producer: James Lapine and William Finn</li>
+												<li>Release: 2016</li>
+												<li>Rating: Eh</li><br>
+											</ol>
+											</div>
+					<div id="ccontent">
+					<img class="auditorium" src="../../images/randomlove/musicals/fl.jpg" style="width: 160px;"/>
+					<br><br><h3>Footloose</h3>            <ol class="playlist_info">
+						<li>Producer: Dean Pitchford and Walter Bobbie</li>
+						<li>Release: 1998</li>
+						<li>Rating: Eh</li><br>
+					</ol>
+					</div>
+					<div id="ccontent">
+					<img class="auditorium" src="../../images/randomlove/musicals/ma.jpg" style="width: 160px;"/>
+					<br><br><h3>Matilda</h3>            <ol class="playlist_info">
+						<li>Producer: Dennis Kelly</li>
+						<li>Release: 2010</li>
+						<li>Rating: Eh</li><br>
+					</ol>
+					</div>
 
+					<div id="ccontent">
+					<img class="auditorium" src="../../images/randomlove/musicals/tt.jpg" style="width: 160px;"/>
+					<br><br><h3>The Book of Mormon</h3>            <ol class="playlist_info">
+						<li>Producer: Matt Stone, Robert Lopez, Trey Parker</li>
+						<li>Release: 2011</li>
+						<li>Rating: Taste</li><br>
+					</ol>
+					</div>
+
+					<div id="ccontent">
+						<img class="auditorium" src="https://drive.google.com/uc?export=view&id=13psLK8tBlJKoDH7VJLIwdz9hhH3RzB56" style="width: 160px;"/>
+						<br><br><h3>35MM: A Musical Exibition</h3>            <ol class="playlist_info">
+							<li>Producer: Ryan Scott Oliver</li>
+							<li>Release: 2012</li>
+							<li>Rating: Bread with spice</li><br>
+						</ol>
+						</div>
+
+
+						<div id="ccontent">
+							<img class="auditorium" src="https://drive.google.com/uc?export=view&id=1Qp8Jz1wsqC42Rm-zIxAN6AuxsL_Vl8IY" style="width: 160px;"/>
+							<br><br><h3>Dogfight</h3>            <ol class="playlist_info">
+								<li>Producer: Peter Duchan</li>
+								<li>Release: 2012</li>
+								<li>Rating: Meh</li><br>
+							</ol>
+							</div>
+
+
+				<div id="ccontent">
+					<img class="auditorium" src="https://drive.google.com/uc?export=view&id=1d0PDms8-6CNzDGocCIXOYF60HPHNt9Zn" style="width: 160px;"/>
+					<br><br><h3>Mad Ones</h3>            <ol class="playlist_info">
+						<li>Producer: Kait Kerrigan, Brian Lowdermilk</li>
+						<li>Release: 2020</li>
+						<li>Rating: Just a few sour patches</li><br>
+					</ol>
+					</div>
+
+
+					<div id="ccontent">
+						<img class="auditorium" src="https://drive.google.com/uc?export=view&id=1oo19qLqQrLk5Zc4PTTnPHW5AtIb1zAtC" style="width: 160px;"/>
+						<br><br><h3>Jekyll & Hyde</h3>            <ol class="playlist_info">
+							<li>Producer: Leslie Bricusse</li>
+							<li>Release: 1995</li>
+							<li>Rating: Quite delightful~</li><br>
+						</ol>
+						</div>
 
 
         <div id="site_entry">
