--- a/videogames/gameslist/index.html
+++ b/videogames/gameslist/index.html
@@ -552,7 +552,11 @@
                <tr><td>GORN</td><td>Y</td><td>N</td><td>PC</td><td>Plan to</td><td>N</td><td></td></tr>
                <tr><td>SuperHot VR</td><td>Y</td><td>N</td><td>PC</td><td>Plan to</td><td>N</td><td></td></tr>
                <tr><td>Muse Dash</td><td>Y</td><td>N</td><td>PC</td><td>Plan to</td><td>N</td><td></td></tr>
-
+               <tr><td>Super Smash Bros Ultimate</td><td>N</td><td>N</td><td>Switch</td><td>Completed</td><td>N</td><td></td></tr>
+               <tr><td>Animal Crossing: New Horizons</td><td>N</td><td>N</td><td>Switch</td><td>Completed</td><td>N</td><td></td></tr>
+               <tr><td>Xenoblade Chronicles 2</td><td>Y</td><td>N</td><td>Switch</td><td>Completed</td><td>N</td><td></td></tr>
+               <tr><td>Donkey Kong Country: Tropical Freeze</td><td>Y</td><td>N</td><td>Switch</td><td>Completed</td><td>N</td><td></td></tr>
+               <tr><td>Crash Bandicoot 'N Sane Trilogy</td><td>Y</td><td>N</td><td>Switch</td><td>Completed</td><td>N</td><td></td></tr>
 
               </tbody></table>
 
