--- a/daily/index.html
+++ b/daily/index.html
@@ -64,30 +64,33 @@
   </div>
     <h1>Solar-Day: No. 【0017】</h1><br>
     
-    <h3>「M.E.T.A.」┈</h3><p>oh, we're moving on! cuz nothing else is standing in our way! stay focused on the present! we're moving fast! and anything that's lame we are blowing right past!</p>
+    <h3>「M.E.T.A.」┈</h3><p>plenty of work accomplished,,,, its also my bday today~</p>
 
-<br><h3>「Website」┈</h3><p>i finished lubing switches ;; its such a pain, and it takes so longgggggg, glad to be done so i can start handwiring</p>
-<br>
-
-<p>also i got a new deskmat and took a picture of it with my fav trackball</p><br>
-
-
- <br><h3>「Website」┈</h3><p>i wrote a brief little thing about cuphead for the website, see it:
-  <a href="https://relivesight.com/videogames/cuphead/" target="_blank">> here <</a>
+ <br><h3>「Website」┈</h3><p>i did quite a bit of work on the site, i fixed the some broken css/visuals. i updated the backgrounds for
+the <a href="https://relivesight.com/reference/" target="_blank">reference subpages,</a>
+the <a href="https://relivesight.com/code/" target="_blank">code subpage(s),</a>
+the <a href="https://relivesight.com/video/" target="_blank">video subpages,</a> and
+the <a href="https://relivesight.com/videogames/" target="_blank">videogames subpages</a>.
+i  also updated the 
+<a href="https://relivesight.com/videogames/gameslist/" target="_blank">videogames list</a> and
+<a href="https://relivesight.com/anime/list/" target="_blank">anime list</a>
+but MOST IMPORTANTLYY!!~!~!~!~!~ I FINISHED THE ABSOLUETELY WONDERFUL 
+<a href="https://relivesight.com/manga/" target="_blank">~manga~page~</a>!!!!!!!!!
+this page has scans done by ✧༺♥༻∞YOURS TRULY∞༺♥༻✧ check out chapter 8!~ i bought the japanese volumes and paid a translator, then
+photoshopped and typeset everything~~ it turned out pretty well!
  </p>
 
 
- <br><h3>「Manga/Shows」┈</h3><p>read more komi cant communicate, watched more avatar, and ep 1 of my next life as a villainess: all routes lead to doom!
-   it looks pretty good so far, i like this isekai alot more than i should eheh, maybe im just anime deprived but im enjoying it, for some reason the last anime i picked didn't sit well, but i'm glad to be enjoying it again,
-   thanks alex for the recommendation~ this is the carefree anime feeling i missed.. also the meeting in catarina's head was adorable~
+ <br><h3>「Manga/Shows」┈</h3><p>ch 257 of komi cant communicate was amazing~~~ im also all done with avatar: the last airbender and im watching
+   legend of korra now, and honestly its quite good and mature. the animation and choreography are leagues above the last airbender!
  </p>
  
 
- <br><h3>「3d Printing」┈</h3><p>prints really do take a long time dont theyyy ;;</p>
+ <br><h3>「3d Printing」┈</h3><p>ive printed like 4 tiny box mikus, dont ask</p>
  
 
 
-<br><h3>「Jams of the day」┈</h3><p>New Politics - A Bad Girl In Harlem, Pale Waves - My Mind Makes Noises</p>
+<br><h3>「Jams of the day」┈</h3><p>New Politics - Unstoppable, Mutemath - Chaos</p>
     </div>
   </div> 
 
