--- a/anime/list/index.html
+++ b/anime/list/index.html
@@ -267,7 +267,7 @@
          <tr><td>Rascal Does Not Dream of Dreaming Girl</td><td>Completed</td><td>1</td><td>Movie</td><td>7.4</td></tr>
          <tr><td>91 Days</td><td>Dropped</td><td>10</td><td>Tv</td><td>~</td></tr>
          <tr><td>Avatar: The Last Airbender </td><td>Completed</td><td>61</td><td>(Not anime)</td><td>~</td></tr>
-         <tr><td>My Next Life as a Villainess</td><td>Watching</td><td>10</td><td>Tv</td><td>~</td></tr>
+         <tr><td>My Next Life as a Villainess</td><td>Completed</td><td>12</td><td>Tv</td><td>5</td></tr>
          <tr><td>Avatar: Legend of Korra</td><td>Watching</td><td>24</td><td>(Not anime)</td><td>~</td></tr>
         </tbody></table>
 
