--- a/studylogs/index.html
+++ b/studylogs/index.html
@@ -64,7 +64,7 @@
 						<br><br><h3>Coming Soon</h3>            <ol class="playlist_info">
 							<li>coming soon <</li><br>
             </ol>
-						<a href="../ucc"  target="_blank" class="label3">CLICK TO SEE MY LEARN</a>
+						<a href="../ucc" class="label3">CLICK TO SEE MY LEARN</a>
 
 
         </div>
