--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <a href="/ucc" class="navi"><img src="images/nav/flow.png">coming-soon</a>
     <a href="/concept" class="navi"><img src="images/nav/flow.png">concept</a>
 	<div style="margin:30px 0;">
-	<a href="new.html"><img src="images/home/test.gif" class="img-center" style="image-rendering: pixelated;image-rendering: -moz-crisp-edges;image-rendering: crisp-edges;"></a></div>
+	<a href="new.html"><img src="images/home/test.webp" class="img-center" style="image-rendering: pixelated;image-rendering: -moz-crisp-edges;image-rendering: crisp-edges;"></a></div>
 </div>
 
 <div class="col-sm-12 col-md-9 contentRight">
@@ -76,7 +76,7 @@
     <div class="col-sm-12">
       <!--<h2>it all comes tumbling down, tumbling down, tumbling down . . .</h2>-->
       <img class="logo" style="width:500px;" src="images/home/tumble.png" />
-			<img class="logo" src="images/home/ddd.gif" />
+			<img class="logo" src="images/home/ddd.webp" />
       <div class="row imgPixel">
 <p>feel free to leave a note in the guest-book while you're here!</p>
 <p class="text-center">┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺♥༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
@@ -84,7 +84,7 @@
   ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺♥༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈</p>
  
 
-<div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
+<div class="col-sm-3 col-md-2"><img src="images/home/tell.jpg" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">6/25/20 </h3>
           <p style="margin-bottom:30px;">*＊✿❀pink hair black nails❀✿＊*</p>
@@ -92,7 +92,7 @@
 
 
 
-<div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif" class="img-center"></div>
+<div class="col-sm-3 col-md-2"><img src="images/home/uu22.gif" class="img-center"></div>
 <div class="col-sm-9 col-md-offset-1">
   <h3 style="margin-bottom:10px;">4/28/20 </h3>
   <p style="margin-bottom:30px;">all pages accessable!</p>
@@ -100,7 +100,7 @@
 
 
 
-<div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
+<div class="col-sm-3 col-md-2"><img src="images/home/tell.jpg" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">4/22/20 </h3>
           <p style="margin-bottom:30px;">The sun is my worst enemy -.-</p>
@@ -108,7 +108,7 @@
 
 
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="images/home/uu22.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">4/11/20 </h3>
           <p style="margin-bottom:30px;">get ready, wake your psyche up!</p>
@@ -116,100 +116,100 @@
 
 
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="images/home/tell.jpg" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">3/29/20 </h3>
           <p style="margin-bottom:30px;">NieR Replicant!! <br>NieR Reincarnation!!</p>
         </div>
 
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="images/home/uu22.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">3/7/20 </h3>
           <p style="margin-bottom:30px;">today's sum ls 30</p>
         </div>
 
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="images/home/tell.jpg" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">2/26/20 </h3>
           <p style="margin-bottom:30px;"><strike>strike! you're out. change sides</strike></p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="images/home/uu22.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">1/28/20 </h3>
           <p style="margin-bottom:30px;">pr[]ductivity skyr[]ckets with l[]gs</p>
         </div>
 
-				<div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
+				<div class="col-sm-3 col-md-2"><img src="images/home/tell.jpg" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">1/17/20 <img src="images/nav/flow.png" class="new"></h3>
           <p style="margin-bottom:30px;">pump up the jam. new page.</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="images/home/uu22.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">1/8/20 </h3>
           <p style="margin-bottom:30px;">physical reality is nothing but a sneaky ninja</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="images/home/tell.jpg" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">12/28/19</h3>
           <p style="margin-bottom:30px;">maybe engines will behave today.</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="images/home/uu22.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">11/10/19</h3>
           <p style="margin-bottom:30px;">new pages will be done soon... more to come?</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="images/home/tell.jpg" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">10/25/19</h3>
           <p style="margin-bottom:30px;">i stan tron legacy. now you know, i am invalid.</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="images/home/uu22.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">7/15/19</h3>
           <p style="margin-bottom:30px;">m*necraft server! also @f*ntface sucks.</p>
         </div>
 
-      <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
+      <div class="col-sm-3 col-md-2"><img src="images/home/tell.jpg" class="img-center"></div>
       <div class="col-sm-9 col-md-offset-1">
         <h3 style="margin-bottom:10px;">6/30/19</h3>
         <p style="margin-bottom:30px;">hey look <a href="https://artbreeder.com/browse" target="_blank">...art...</a> fancy (∿°○°)∿♡</p>
       </div>
 
         <div class="row imgPixel">
-          <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif" class="img-center"></div>
+          <div class="col-sm-3 col-md-2"><img src="images/home/uu22.gif" class="img-center"></div>
           <div class="col-sm-9 col-md-offset-1">
             <h3 style="margin-bottom:10px;">6/15/19</h3>
             <p style="margin-bottom:30px;">everything that lives is designed to end. we are perpetually trapped in a never-ending spiral of life and death. is this a curse? or some kind of punishment? i often think about the god who blessed us with this cryptic puzzle...and wonder if we'll ever get the chance to kill him.</p>
           </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="images/home/tell.jpg" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">3/8/19</h3>
           <p style="margin-bottom:30px;">since this website will inevitably be updated in january of 2020 this entry isn't real.</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="images/home/uu22.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">11/18/18</h3>
           <p style="margin-bottom:30px;">welcøme to ren's riøt of a web space—my øfficial webring tø a(rt)nime.</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="images/home/tell.jpg" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">10/27/18</h3>
           <p style="margin-bottom:30px;">livin life, shakin strife, wont know, wont go,</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="images/home/uu22.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">09/10/18</h3>
           <p style="margin-bottom:30px;">log: a new beginning</p>
