--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <meta name="keywords" content="ren">
 <meta name="author" content="omnisairen">
 <link rel="icon" type="image/png" href="images/home/pupilpng.png" sizes="1000x1000" />
-<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/sometype-mono" type="text/css"/>
-<!-- InstanceBeginEditable name="head" -->
+ <!--href="https://fontlibrary.org/face/sometype-mono" type="text/css"-->
+<link rel="stylesheet" media="screen"/>
+<!-- InstanceBeginEditable name="head" 
 <!-- InstanceEndEditable -->
 </head>
 <script language="javascript">
